tests/expectations/compiler/dynamic_dispatch/dynamic_storage_write_fail.out
Error [ETYC0372000]: Invalid assignment target: test.aleo::Counter@(target)::total.
    --> compiler-test:14:5
     |
  14 |     Counter@(target)::total = 5u64;
     |     ^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
